2013-09-02  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw32/mingw32-gettext.xml: Add "dll" component class for 0.18.3.1-1.
	Fix typo declaring the requirement for the dll.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-09-01  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw32/mingw32-binutils.xml: Release 2.23.2-1.
	* mingw32/mingw32-gcc4.xml: Release 4.8.1-1.
	* mingw32/mingw32-gettext.xml: Release 0.18.3.1-1.
	* mingw32/mingw32-libiconv.xml: Release 1.14-3.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-08-28  Earnie Boyd  <earnie@users.sourceforge.net>

	Correct ptheads-w32-2.9.1-1 release.

	* mingw32/mingw32-pthreads-w32.xml: Correct 2.9.1-1 release.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-08-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add support for automated catalogue publication.

	* Makefile.comm.in (published): New build goal; it redirects to the
	new primary goal implemented...

	* Makefile.in: ...here.
	(published): New primary build goal; implement it, using...
	(frs-username-check, frs-publish): ...these new internal build goals;
	implement them; they should not normally be invoked directly.
	(FRS_USERNAME, FRS_CATALOGUE): New macros; define them.
	(FRS_CATALOGUE_HOST, FRS_CATALOGUE_ROOT, FRS_CATALOGUE_PATH):
	(MAKE_RECURSIVE, PRIMARY_GOALS): Likewise.

	* configure.ac (AC_INIT): Bump version number to 2.2
	(FRS_USERNAME): Declare it as precious; assign "anonymous" as default.

2013-08-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct a catalogue publication anomaly.

	* mingw32/mingw32-zlib.xml: Correct typos.
	(zlib-1.2.8-1.mingw32-*.tar.lzma): Such malformed file references...
	(zlib-1.2.8-1-mingw32-*.tar.lzma): ...should have appeared thus.

	* common/issue.log mingw32/issue.log: References to...
	(package-list.xml, mingw32-package-list.xml, mingw32-zlib.xml):
	...these automatically updated; publish lzma compressed copies to FRS.
