@@ -32,7 +32,7 @@
   b4c60a4702749a0369b5059e7c1f50ce567e2c95 2012073100 mingw32-bzip2.xml
   c2fa4fe580615c774f72216fb06e35a909a08ba6 2012040200 mingw32-cygutils.xml
   c320ae7f1db93419e4a9b9ad098f69bb6655af08 2013012700 mingw32-dos2unix.xml
-  a95192db0a6f7de983c642096ce2a335dcad8393 2012073100 mingw32-expat.xml
+  ab236eeed9aa409089e6495c172c4f994b3272bf 2013090200 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
   79f41e5679830880140aa807be23d09b782a6c79 2013090100 mingw32-gcc4.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   d0657d9bc4fd5fa5bae78d80f003485cfde305c3 2013082300 mingw32-mpc.xml
   9c47305797d932da02275a6894b30492440af00e 2013082300 mingw32-mpfr.xml
-  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090201 mingw32-package-list.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090202 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   7e22a7d22719059c28dcb37b7a48806070964b09 2013082800 mingw32-pthreads-w32.xml
